# ding-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: build.yml
src/: config.rs  main.rs  notify.rs
src/notify/: discord_webhook.rs  email.rs
