[package]
name = "ding-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10", features = ["toml", "env"] }
serde = "1.0.136"
lettre = "0.10.0-rc.5"

[dependencies.reqwest]
version = "0.11.10"
features = ["blocking", "json"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]